--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/templatemo-xtra-blog.css" rel="stylesheet">
 <!--
-    
+    ''
 TemplateMo 553 Xtra Blog
 
 https://templatemo.com/tm-553-xtra-blog
@@ -26,26 +26,7 @@ https://templatemo.com/tm-553-xtra-blog
                 <div class="mb-3 mx-auto tm-site-logo"><i class="fas fa-times fa-2x"></i></div>            
                 <h1 class="text-center">Xtra Blog</h1>
             </div>
-            <nav class="tm-nav" id="tm-nav">            
-                <ul>
-                    <li class="tm-nav-item"><a href="index.html" class="tm-nav-link">
-                        <i class="fas fa-home"></i>
-                        Blog Home
-                    </a></li>
-                    <li class="tm-nav-item"><a href="post.html" class="tm-nav-link">
-                        <i class="fas fa-pen"></i>
-                        Single Post
-                    </a></li>
-                    <li class="tm-nav-item active"><a href="about.html" class="tm-nav-link">
-                        <i class="fas fa-users"></i>
-                        About Xtra
-                    </a></li>
-                    <li class="tm-nav-item"><a href="contact.html" class="tm-nav-link">
-                        <i class="far fa-comments"></i>
-                        Contact Us
-                    </a></li>
-                </ul>
-            </nav>
+            {% include "partials/nav.html" %}
             <div class="tm-mb-65">
                 <a href="https://facebook.com" class="tm-social-link">
                     <i class="fab fa-facebook tm-social-icon"></i>
@@ -202,7 +183,7 @@ https://templatemo.com/tm-553-xtra-blog
             </div>        
             <footer class="row tm-row">
                 <div class="col-md-6 col-12 tm-color-gray">
-                    Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-external-link">TemplateMo</a>
+
                 </div>
                 <div class="col-md-6 col-12 tm-color-gray tm-copyright">
                     Copyright 2020 Xtra Blog Company Co. Ltd.
@@ -210,7 +191,5 @@ https://templatemo.com/tm-553-xtra-blog
             </footer>
         </main>
     </div>
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/templatemo-script.js"></script>
 </body>
 </html>
