--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,26 +26,7 @@ https://templatemo.com/tm-553-xtra-blog
                 <div class="mb-3 mx-auto tm-site-logo"><i class="fas fa-times fa-2x"></i></div>            
                 <h1 class="text-center">Xtra Blog</h1>
             </div>
-            <nav class="tm-nav" id="tm-nav">            
-                <ul>
-                    <li class="tm-nav-item"><a href="index.html" class="tm-nav-link">
-                        <i class="fas fa-home"></i>
-                        Blog Home
-                    </a></li>
-                    <li class="tm-nav-item"><a href="post.html" class="tm-nav-link">
-                        <i class="fas fa-pen"></i>
-                        Single Post
-                    </a></li>
-                    <li class="tm-nav-item"><a href="about.html" class="tm-nav-link">
-                        <i class="fas fa-users"></i>
-                        About Xtra
-                    </a></li>
-                    <li class="tm-nav-item active"><a href="contact.html" class="tm-nav-link">
-                        <i class="far fa-comments"></i>
-                        Contact Us
-                    </a></li>
-                </ul>
-            </nav>
+            {% include "partials/nav.html" %}
             <div class="tm-mb-65">
                 <a href="https://facebook.com" class="tm-social-link">
                     <i class="fab fa-facebook tm-social-icon"></i>
@@ -70,7 +51,8 @@ https://templatemo.com/tm-553-xtra-blog
             <!-- Search form -->
             <div class="row tm-row">
                 <div class="col-12">
-                    <form method="GET" class="form-inline tm-mb-80 tm-search-form">                
+                    <form method="GET" class="form-inline tm-mb-80 tm-search-form">  
+                        {% csrf_token %}              
                         <input class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search">
                         <button class="tm-search-button" type="submit">
                             <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
@@ -93,7 +75,8 @@ https://templatemo.com/tm-553-xtra-blog
                     <h2 class="tm-color-primary tm-post-title tm-mb-60">Contact Us</h2>
                 </div>
                 <div class="col-lg-7 tm-contact-left">
-                    <form method="POST" action="" class="mb-5 ml-auto mr-0 tm-contact-form">                        
+                    <form method="POST" action="" class="mb-5 ml-auto mr-0 tm-contact-form">           
+                        {% csrf_token %}             
                         <div class="form-group row mb-4">
                             <label for="name" class="col-sm-3 col-form-label text-right tm-color-primary">Name</label>
                             <div class="col-sm-9">
