--- a/templates/index.html
+++ b/templates/index.html
@@ -26,44 +26,7 @@ https://templatemo.com/tm-553-xtra-blog
           </div>
           <h1 class="text-center">Xtra Blog</h1>
         </div>
-        <nav class="tm-nav" id="tm-nav">
-          <ul>
-            <li class="tm-nav-item active">
-              <a href="{% url "home" %}" class="tm-nav-link">
-                <i class="fas fa-home"></i>
-                Blog Home
-              </a>
-            </li>
-            {% if user.is_authenticated %}
-              <li class="tm-nav-item">
-                <a href="{% url "profile" %}" class="tm-nav-link">
-                  <i class="fas fa-user"></i>
-                  Your Profile
-                </a>
-              </li>
-            {% else %}
-                <li class="tm-nav-item">
-                <a href="{% url 'login' %}" class="tm-nav-link">
-                    <i class="fas fa-user"></i>
-                    Log in
-                </a>
-            </li>            
-            {% endif %}
-
-            <li class="tm-nav-item">
-              <a href="about.html" class="tm-nav-link">
-                <i class="fas fa-users"></i>
-                About Xtra
-              </a>
-            </li>
-            <li class="tm-nav-item">
-              <a href="contact.html" class="tm-nav-link">
-                <i class="far fa-comments"></i>
-                Contact Us
-              </a>
-            </li>
-          </ul>
-        </nav>
+        {% include "partials/nav.html" %}
         <div class="tm-mb-65">
           <a rel="nofollow" href="https://fb.com/templatemo" class="tm-social-link"><i class="fab fa-facebook tm-social-icon"></i></a>
           <a href="https://twitter.com" class="tm-social-link"><i class="fab fa-twitter tm-social-icon"></i></a>
